# RobotColorizer

./: CMakeLists.txt  README.md  Robot.cpp  ServerF.py  camera_processor.cpp  camera_processor.h  colorizer.cpp  colorizer.h  commands_reciever.h  main.cpp  mqtt_handler.cpp  mqtt_handler.h  reciever.cpp  robot.h  robot_controller.cpp  robot_controller.h  server.cpp  server.h  toolchain-rpi.cmake
docs/: Concept Model.txt  UseCase Diagram.txt  ТЗ_Робот_удаление_граффити.docx
